# agent-roles-spec

./: .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE_CHECKLIST.md  ROADMAP.md  aliases.toml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: role_proposal.md  spec_feedback.md
.github/workflows/: npm.yml  pypi.yml
adapters/: README.md
adapters/ccb/: README.md
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/hive/: README.md
agent_roles/: __init__.py  catalog.py  cli.py  manifest.py  store.py
cli/: README.md  agent-roles
conformance/: README.md
docs/i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
docs/outreach/: README.md  agent-roles-introduction-letter.en.md  agent-roles-introduction-letter.md  agent-roles-public-proposal.en.md  agent-roles-public-proposal.zh-CN.md
docs/plantree/: README.md
host-adapters/: README.md
host-adapters/ccb/: README.md
host-adapters/claude-code/: README.md
host-adapters/codex/: README.md
host-adapters/hive/: README.md
reference_roles/: README.md
reference_roles/archi/: README.md  memory.md  role.toml
roles/: README.md
roles/archi/: README.md  memory.md  role.toml
roles/ccb-self/: README.md  memory.md  role.toml
roles/mather/: README.md  (+2 more)
schemas/: README.md
specs/: README.md  host-adapters-v1.md  isolation-v1.md  metadata-v1.md  role-v1.md  rolepack-v1.md
templates/: README.md
tests/: test_agent_roles_cli.py  test_archi_ccb_tool.py  test_ccb_self_role.py  test_mather_role.py  test_mother_role.py
(+113 files in other folders)
